<resources>
    <!--HBY-->
    <string name="app_name">时遇记</string>
    <string name="login">登陆</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="checkPw">确认密码</string>
    <string name="showPw">显示密码</string>
    <string name="hidePw">隐藏密码</string>
    <string name="forgetPw">忘记密码？</string>
    <string name="signUp">注册</string>
    <string name="log2sign">还没有账号？点击这里注册</string>
    <string name="sign2log">已有账号？点击这里登陆</string>
    <string name="findPw">找回密码</string>
    <string name="captcha">验证码</string>
    <string name="getCaptcha">获取验证码</string>
    <string name="find2log">想起密码了？点击这里登陆</string>
    <string name="settings">设置</string>
    <string name="itemInfo">个人信息</string>
    <string name="itemNotice">通知设置</string>
    <string name="itemQuestion">常见问题</string>
    <string name="itemContact">联系客服</string>
    <string name="itemFeedback">意见反馈</string>
    <string name="itemAbout">关于我们</string>
    <string name="itemNight">夜间模式</string>
    <string name="itemExit">退出登陆</string>
    <string name="send">提交</string>
    <string name="feedbackHint">请输入您的意见或建议</string>
    <string name="feedbackNumHint">请输入您的手机号/邮箱（可选）</string>

    <!--GZQ-->
    <string name="hide_down">隐藏</string>
    <string name="comment_content">输入评论内容</string>
    <!--<string name="send">发送</string>-->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">昵称</string>
    <string name="nav_header_subtitle">个性签名</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--LJY-->
    <string name="likea1">屏蔽</string>
    <string name="likea2">筛选</string>
    <string name="titlea">传统音乐</string>
    <string name="ida1">逗逗43组</string>
    <string name="in1">新人问一下，我国民族音乐中，四二，四三，四四拍又叫什么？(｡・`ω´･)　</string>
    <string name="timea1">4分钟前</string>
    <string name="talka1"> 1 评论</string>
    <string name="wella1"> 1 点赞</string>
    <string name="ida2">丨锴</string>
    <string name="in2">求《小刀会序曲》总谱!很喜欢这个曲子啊！！！</string>
    <string name="ida3">cool_gao</string>
    <string name="in3">古筝《如是》</string>
    <string name="ida4">逗逗43组</string>
    <string name="in4">新人问一下，我国民族音乐中，四二，四三，四四拍又叫什么？(｡・`ω´･)　</string>
    <string name="ida5">逗逗43组</string>
    <string name="in5">新人问一下，我国民族音乐中，四二，四三，四四拍又叫什么？(｡・`ω´･)　</string>
    <string name="likea3">取消</string>
    <string name="likea4">留言中</string>
    <string name="likea5">发布</string>
    <string name="likea6">屏蔽</string>
    <string name="word1">分享些什么吧...</string>
    <string name="butt1">你在哪里</string>
    <string name="butt2">开封市</string>
    <string name="butt3">开封市樊楼</string>
    <string name="butt4">开封市龙亭区</string>
    <string name="butt5">#古琴</string>
    <string name="butte1">+自定义标签</string>
    <string name="words">500</string>
    <string name="nam1">确山打铁花</string>
    <string name="intro2">        确山铁花,又称打铁花，国家级非物质文化遗产，是河南省仅存的大型民间传统焰火，素有“民间焰火之最”、“中原文化奇葩”的美誉。起源于北宋，鼎盛于明清，是一种民间工匠共同祭祀太上老君而举行的活动，后来演变为民间比较综合的庆祝仪式。</string>
    <string name="guanzhu">关注</string>
    <string name="apply">申请成为传承人</string>
    <string name="title_activity_channel">channel</string>
    <!--<string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--<string name="navigation_drawer_close">Close navigation drawer</string>-->
    <!--<string name="nav_header_title">Android Studio</string>-->
    <!--<string name="nav_header_subtitle">android.studio@android.com</string>-->
    <!--<string name="nav_header_desc">Navigation header</string>-->
    <!--<string name="action_settings">Settings</string>-->
    <string name="chan1">民间文学</string>
    <string name="chan2">传统音乐</string>
    <string name="chan3">传统舞蹈</string>
    <string name="chan4">传统戏剧</string>
    <string name="chan5">曲艺</string>
    <string name="chan6">杂技与竞技</string>
    <string name="chan7">传统美术</string>
    <string name="chan8">传统技艺</string>
    <string name="chan9">传统医药</string>
    <string name="chan10">民俗</string>
    <string name="title_activity_channel_video">channel_video</string>
    <string name="chuanyuea1">蒙古族长调民歌 </string>
    <string name="chuanyuea2">蒙古族呼麦</string>
    <string name="chuanyuea3">畲族民歌</string>
    <string name="chuanyuea4">崖州民歌</string>
    <string name="chuanyuea5">花儿</string>
    <string name="chuanyuea6">薅草锣鼓</string>
    <string name="chuanyuea7">侗族大歌</string>
    <string name="chuanyuea8">多声部民歌</string>
    <string name="chuanyuea9">古琴艺术</string>
    <string name="chuanyuea10">蒙古族马头琴音乐</string>
    <string name="chuanyuea11">蒙古族四胡音乐</string>
    <string name="chuanyuea12">唢呐艺术</string>
    <string name="chuanyuea13">江南丝竹</string>
    <string name="chuanyuea14">十番音乐</string>
    <string name="chuanyuea15">鲁西南鼓吹乐</string>
    <string name="chuanyuea16">土家族打溜子</string>
    <string name="chuanyuea17">冀中笙管乐</string>
    <string name="jingxuan">精选视频</string>
    <string name="remen">热门视频</string>
    <string name="zuixin">最新视频</string>
    <string name="gengduo">更多</string>
    <string name="shipinintro1">微波炉香辣虾这个真的超好吃！！</string>
    <string name="shipinintro2">小蛋糕小蛋糕小蛋糕~~~</string>
    <string name="shipinintro3">这个面包很好看，所以一定很好吃。</string>
    <string name="shipinintro4">抹茶卷呐，美味~</string>
</resources>
