<?xml version="1.0" encoding="utf-8"?><!--写动态页面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"

    tools:context="com.shiyuji.Write">
    <include layout="@layout/title_toolbar2"></include><!--引入标题栏-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="6dp"
         android:orientation="vertical">
         <!--编辑动态-->
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="top"
             android:hint="@string/word1"
            android:lines="8"
             android:background="#ffffff"

             />


         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="#ffffff">


             <!--添加图片按钮-->
         <ImageButton

             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/adda"
             android:background="#0000"
             android:onClick="show"
             android:padding="8dp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingTop="20dp"

             android:text="添加图片"
             />
             <!--动态字数显示-->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/words"
                 android:gravity="right"
                android:layout_marginLeft="170dp"
                 android:drawableRight="@drawable/paopao"/>
         </LinearLayout>
         <!--动态标签-->
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
            android:columnCount="4"
             android:padding="2dp"
             android:layout_marginTop="5dp"
             android:paddingLeft="0dp">
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:text="@string/butt1"
                android:padding="0dp"
                 android:background="@drawable/btn_selector"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:text="@string/butt2"

                 android:background="@drawable/btn_selector"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:text="@string/butt3"

                 android:background="@drawable/btn_selector"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:text="@string/butt4"

                 android:background="@drawable/btn_selector"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:text="@string/butt5"

                 android:background="@drawable/btn_selector"/>
             <!--自定义按钮-->
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:text="@string/butte1"
                 android:layout_marginLeft="5dp"
                 android:background="@drawable/btn_radius"/>


         </GridLayout>
     </LinearLayout>

</LinearLayout>