<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <com.shiyuji.Titlebar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:titlebarText="编辑" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="vertical"
        android:padding="6dp">

        <EditText
            android:id="@+id/topicInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/word1"
            android:lines="8"
            android:padding="5dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/editAddImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/editAddImage"
                android:gravity="center"
                android:text="添加图片" />

            <TextView
                android:id="@+id/topicInputNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/topicInputTotalNum"/>

            <TextView
                android:id="@+id/topicInputTotalNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text=" / 300"/>
        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:columnCount="4"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/btn_selector"
                android:text="@string/butt1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/btn_selector"
                android:text="@string/butt2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/btn_selector"
                android:text="@string/butt3" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/btn_selector"
                android:text="@string/butt4" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/btn_selector"
                android:text="@string/butt5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btn_radius"
                android:text="@string/butte1" />
        </GridLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="发布" />
    </LinearLayout>
</LinearLayout>