<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_titlebar2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="52dp"
    android:padding="8dp"
    android:background="@drawable/bg"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/like3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="16sp"
        android:background="#00000000"
        android:layout_centerVertical="true"
        android:text="@string/likea3"/>

    <TextView
        android:id="@+id/like4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:textStyle="bold"


        android:text="@string/likea4"/>
    <Button
        android:id="@+id/like5"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/likea5"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:background="#00000000"

        />

</RelativeLayout>