<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@drawable/launch_background">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:text="@string/login"
                    android:textSize="45sp"/>
                <ImageView
                    android:id="@+id/loginUH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/user_head"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/loginUn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="6dp"
                        android:hint="@string/username"
                        android:maxLines="1"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/loginPw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="6dp"
                            android:hint="@string/password"
                            android:maxLines="1"
                            android:maxLength="16"
                            android:inputType="textPassword"/>
                        <!--<ImageView-->
                            <!--android:id="@+id/togglePw"-->
                            <!--android:layout_width="25dp"-->
                            <!--android:layout_height="25dp"-->
                            <!--android:layout_alignEnd="@+id/loginPw"-->
                            <!--android:src="@drawable/show_pw"/>-->
                        <Button
                            android:id="@+id/togglePw"
                            android:layout_width="wrap_content"
                            android:layout_height="34dp"
                            android:layout_marginEnd="6dp"
                            android:layout_alignEnd="@+id/loginPw"
                            android:text="@string/showPw"
                            android:textColor="@color/gray"
                            android:background="@color/colorPrimary"/>
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/findPw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:text="@string/forgetPw"
                        android:textAlignment="center"/>
                </LinearLayout>
                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:textColor="@color/gray"
                    android:background="@color/colorPrimaryDark"/>
                <TextView
                    android:id="@+id/log2sign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:text="@string/log2sign"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
</LinearLayout>